[package]
name = "unhygienic"
version = "0.1.1"
authors = ["Lymia Aluysia <lymia@lymiahugs.com>"]

description = "A library for stripping the hygiene out of macro parameters."
keywords = ["macro", "hygiene"]
categories = ["rust-patterns"]

documentation = "https://docs.rs/unhygienic/"
repository = "https://github.com/Lymia/unhygienic"
readme = "../README.md"

license = "MIT/Apache-2.0"

[dependencies]
proc-macro-hack = "0.4"
unhygienic-impl = { version = "0.1.0", path = "../unhygienic-impl" }